hphp/test/zend/good/ext/date/tests/bug34304.php
<?php
date_default_timezone_set("UTC");
echo date('o\-\WW\-N', strtotime('2 January 2005')), "\n";
echo date('o\-\WW\-N', strtotime('9 January 2005')), "\n";
?>